--- a/uSync/v16/DataTypes/OnatrixSections.config
+++ b/uSync/v16/DataTypes/OnatrixSections.config
@@ -39,6 +39,10 @@
     {
       "contentElementTypeKey": "c8dec065-4f6f-420b-bfd4-8aa167f7101b",
       "settingsElementTypeKey": "1558ef8c-4b4a-49db-8a2b-62144953ef5c"
+    },
+    {
+      "contentElementTypeKey": "ce3118d9-2e3c-4911-84cf-704844e67d0c",
+      "settingsElementTypeKey": "3e2facb4-9958-4a87-bd50-2f5e4ad7af8d"
     }
   ]
 }]]></Config>
