question form created in service detail  and working

--- a/uSync/v16/ContentTypes/formsubmissions.config
+++ b/uSync/v16/ContentTypes/formsubmissions.config
@@ -21,6 +21,7 @@
   </Info>
   <Structure>
     <ContentType Key="cbb3cda9-09dc-4898-bc21-846056c1a36f" SortOrder="0">callbackRequest</ContentType>
+    <ContentType Key="ab4ad1e6-d817-40af-bd0c-ebb533830195" SortOrder="1">questionRequest</ContentType>
   </Structure>
   <GenericProperties />
   <Tabs />
