--- a/uSync/v16/DataTypes/OnatrixSections.config
+++ b/uSync/v16/DataTypes/OnatrixSections.config
@@ -43,6 +43,9 @@
     {
       "contentElementTypeKey": "ce3118d9-2e3c-4911-84cf-704844e67d0c",
       "settingsElementTypeKey": "3e2facb4-9958-4a87-bd50-2f5e4ad7af8d"
+    },
+    {
+      "contentElementTypeKey": "f49ece5f-3799-41b0-84cb-de4cf15e0efd"
     }
   ]
 }]]></Config>
