Add Online Support widget

--- a/uSync/v16/Content/assurance-audits.config
+++ b/uSync/v16/Content/assurance-audits.config
@@ -197,6 +197,27 @@
           "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "71af6622-6003-4f4b-84f0-66b4ec721735",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "f98dd1c7-1dbf-40ce-8145-e49f210b9e34",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "71af6622-6003-4f4b-84f0-66b4ec721735",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "f98dd1c7-1dbf-40ce-8145-e49f210b9e34",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "71af6622-6003-4f4b-84f0-66b4ec721735",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
