--- a/uSync/v16/Content/statistic-advisors.config
+++ b/uSync/v16/Content/statistic-advisors.config
@@ -197,6 +197,27 @@
           "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "34fe5511-8fe3-4d45-b992-db4b9999ecf9",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "70a0ae19-c932-4bc5-b0fe-8e723a1b3cb6",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "34fe5511-8fe3-4d45-b992-db4b9999ecf9",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "70a0ae19-c932-4bc5-b0fe-8e723a1b3cb6",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "34fe5511-8fe3-4d45-b992-db4b9999ecf9",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
