--- a/uSync/v16/Content/tax-and-trusts.config
+++ b/uSync/v16/Content/tax-and-trusts.config
@@ -197,6 +197,27 @@
           "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "d0973659-c9b6-4a46-a2b9-1ec8ea039894",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "0f4af687-285f-4516-9e89-1ab422b0db32",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "d0973659-c9b6-4a46-a2b9-1ec8ea039894",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "0f4af687-285f-4516-9e89-1ab422b0db32",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "d0973659-c9b6-4a46-a2b9-1ec8ea039894",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
