--- a/uSync/v16/DataTypes/ServiceDetailAsidesList.config
+++ b/uSync/v16/DataTypes/ServiceDetailAsidesList.config
@@ -9,6 +9,9 @@
   "blocks": [
     {
       "contentElementTypeKey": "7aaeb5c3-6ba8-46b8-94a4-40a5904f406c"
+    },
+    {
+      "contentElementTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e"
     }
   ]
 }]]></Config>
