--- a/uSync/v16/Content/bonds-commodities.config
+++ b/uSync/v16/Content/bonds-commodities.config
@@ -197,6 +197,27 @@
           }
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "67a78bb6-7458-426c-a696-eaef652a2d35",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "74d58bf1-984f-40d0-b682-ba9e9799171e",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "67a78bb6-7458-426c-a696-eaef652a2d35",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "74d58bf1-984f-40d0-b682-ba9e9799171e",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "67a78bb6-7458-426c-a696-eaef652a2d35",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
