--- a/uSync/v16/Content/business-consulting.config
+++ b/uSync/v16/Content/business-consulting.config
@@ -197,6 +197,27 @@
           "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "57f3c6e2-d763-47ed-8451-4f1af88790a6",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "75cc937d-55ab-46ab-9e5e-539697a56168",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "57f3c6e2-d763-47ed-8451-4f1af88790a6",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "75cc937d-55ab-46ab-9e5e-539697a56168",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "57f3c6e2-d763-47ed-8451-4f1af88790a6",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
