--- a/uSync/v16/Content/financial-advisor.config
+++ b/uSync/v16/Content/financial-advisor.config
@@ -197,6 +197,27 @@
           "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "6875783f-ebb1-43fd-9c4c-87a3f43c4fb2",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "3d94316b-d247-4fe9-b78f-883497483a1f",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "6875783f-ebb1-43fd-9c4c-87a3f43c4fb2",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "3d94316b-d247-4fe9-b78f-883497483a1f",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "6875783f-ebb1-43fd-9c4c-87a3f43c4fb2",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
