--- a/uSync/v16/Content/investment-analysis.config
+++ b/uSync/v16/Content/investment-analysis.config
@@ -197,6 +197,27 @@
           "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "fb2f2423-17f7-4db4-a297-8c2c49587cc7",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "2d97b407-785b-41b2-b9b3-824781405e7f",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "fb2f2423-17f7-4db4-a297-8c2c49587cc7",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "2d97b407-785b-41b2-b9b3-824781405e7f",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "fb2f2423-17f7-4db4-a297-8c2c49587cc7",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
