--- a/uSync/v16/Content/risk-management.config
+++ b/uSync/v16/Content/risk-management.config
@@ -197,6 +197,27 @@
           "value": "Dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non "
         }
       ]
+    },
+    {
+      "contentTypeKey": "6fa3f6fc-5ec3-4eeb-becf-0527674d869e",
+      "key": "d7548937-0dbb-4da2-a07d-76ff80bfd4d1",
+      "udi": null,
+      "values": [
+        {
+          "alias": "onlineSupportCardTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "How can we help you?"
+        },
+        {
+          "alias": "onlineSupportCardText",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "online support 24/7, we are here to help you"
+        }
+      ]
     }
   ],
   "settingsData": [],
@@ -205,12 +226,23 @@
       "contentKey": "907128ff-c594-4993-a0ea-1d11439ef768",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "d7548937-0dbb-4da2-a07d-76ff80bfd4d1",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
     "Umbraco.BlockList": [
       {
         "contentKey": "907128ff-c594-4993-a0ea-1d11439ef768",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "d7548937-0dbb-4da2-a07d-76ff80bfd4d1",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
