--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "tailwindcss": "^4.1.17"
   },
   "scripts": {
-    "dev": "npx @tailwindcss/cli -i ./wwwroot/css/input.css -o ./wwwroot/css/output.css --watch"
+    "dev": "npx @tailwindcss/cli -i ./wwwroot/css/input.css -o ./wwwroot/css/output.css --watch",
+    "prod": "npx @tailwindcss/cli -i ./wwwroot/css/input.css -o ./wwwroot/css/mini.css --minify"
+
   },
   "devDependencies": {
     "eslint": "^9.39.1"
