--- a/Onatrix_Umbraco.csproj
+++ b/Onatrix_Umbraco.csproj
@@ -30,5 +30,8 @@
     <CopyRazorGenerateFilesToPublishDirectory>true</CopyRazorGenerateFilesToPublishDirectory>
   </PropertyGroup>
 
-
+	<Target Name="RunTailwindBuild" BeforeTargets="BeforePublish">
+		<Exec Command="npm install" />
+		<Exec Command="npm run prod" />
+	</Target>
 </Project>
