fixing swiper.js

--- a/Onatrix_Umbraco.csproj
+++ b/Onatrix_Umbraco.csproj
@@ -1,37 +1,43 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <CompressionEnabled>false</CompressionEnabled> <!-- Disable compression. E.g. for umbraco backoffice files. These files should be precompressed by node and not let dotnet handle it -->
-  </PropertyGroup>
-  <ItemGroup>
-    <Content Include="app_plugins\omatrixrte\umbraco-package.json" />
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <ItemGroup>
-    <PackageReference Include="Umbraco.Cms" Version="16.2.0" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<CompressionEnabled>false</CompressionEnabled>
+		<CopyRazorGenerateFilesToPublishDirectory>true</CopyRazorGenerateFilesToPublishDirectory>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <!-- Opt-in to app-local ICU to ensure consistent globalization APIs across different platforms -->
-    <PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.3" />
-    <PackageReference Include="uSync" Version="16.1.0" />
-    <RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="72.1.0.3" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="app_plugins\omatrixrte\umbraco-package.json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="App_Plugins\OmatrixRte\" />
-    <Folder Include="wwwroot\images\" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Umbraco.Cms" Version="16.2.0" />
+	</ItemGroup>
 
-  <PropertyGroup>
-    <!-- Razor files are needed for the backoffice to work correctly -->
-    <CopyRazorGenerateFilesToPublishDirectory>true</CopyRazorGenerateFilesToPublishDirectory>
-  </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.3" />
+		<PackageReference Include="uSync" Version="16.1.0" />
+		<RuntimeHostConfigurationOption
+			Include="System.Globalization.AppLocalIcu"
+			Value="72.1.0.3"
+			Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="App_Plugins\OmatrixRte\" />
+		<Folder Include="wwwroot\images\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Update="wwwroot\js\**\*.js" CopyToPublishDirectory="Always" />
+	</ItemGroup>
+
 
 	<Target Name="RunTailwindBuild" BeforeTargets="BeforePublish">
 		<Exec Command="npm install" />
 		<Exec Command="npm run prod" />
 	</Target>
+
 </Project>
