fix team member name

--- a/uSync/v16/Content/about.config
+++ b/uSync/v16/Content/about.config
@@ -86,7 +86,7 @@
                         "expose": [],
                         "Layout": {}
                       },
-                      "markup": "Brandon Newton"
+                      "markup": "\u003Cp class=\u0022text-rte-md font-regular\u0022\u003E\u003Cstrong\u003E\u003Cspan class=\u0022text-primary\u0022\u003EBrandon Newton\u003C/span\u003E\u003C/strong\u003E\u003C/p\u003E"
                     }
                   },
                   {
@@ -138,7 +138,7 @@
                         "expose": [],
                         "Layout": {}
                       },
-                      "markup": "AJ Carter"
+                      "markup": "\u003Cp class=\u0022text-rte-md font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003EAJ Carter\u003C/span\u003E\u003C/p\u003E"
                     }
                   },
                   {
@@ -190,7 +190,7 @@
                         "expose": [],
                         "Layout": {}
                       },
-                      "markup": "Aaron Lambert"
+                      "markup": "\u003Cp class=\u0022text-rte-md font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003EAaron Lambert\u003C/span\u003E\u003C/p\u003E"
                     }
                   },
                   {
@@ -242,7 +242,7 @@
                         "expose": [],
                         "Layout": {}
                       },
-                      "markup": "Tina Fox"
+                      "markup": "\u003Cp class=\u0022text-rte-md font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003ETina Fox\u003C/span\u003E\u003C/p\u003E"
                     }
                   },
                   {
@@ -294,7 +294,7 @@
                         "expose": [],
                         "Layout": {}
                       },
-                      "markup": "Brandon Kerr"
+                      "markup": "\u003Cp class=\u0022text-rte-md font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003EBrandon Kerr\u003C/span\u003E\u003C/p\u003E"
                     }
                   },
                   {
@@ -346,7 +346,7 @@
                         "expose": [],
                         "Layout": {}
                       },
-                      "markup": "Miranda Dayton"
+                      "markup": "\u003Cp class=\u0022text-rte-md font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003EMiranda Dayton\u003C/span\u003E\u003C/p\u003E"
                     }
                   },
                   {
@@ -398,7 +398,7 @@
                         "expose": [],
                         "Layout": {}
                       },
-                      "markup": "Kevin Gardner"
+                      "markup": "\u003Cp class=\u0022text-rte-md font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003EKevin Gardner\u003C/span\u003E\u003C/p\u003E"
                     }
                   },
                   {
