--- a/uSync/v16/Content/services.config
+++ b/uSync/v16/Content/services.config
@@ -59,7 +59,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003E\u003Cspan class=\u0022text-primary\u0022 style=\u0022white-space: pre-wrap;\u0022\u003EWe Provide The Solutions \u003C/span\u003E\u003Cspan class=\u0022text-primary\u0022\u003E\u003Cbr\u003E\u003C/span\u003E\u003Cspan class=\u0022text-primary\u0022 style=\u0022white-space: pre-wrap;\u0022\u003ETo Grow Your Business Faster\u003C/span\u003E\u003C/strong\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-primary\u0022 style=\u0022white-space: pre-wrap;\u0022\u003EWe Provide The Solutions \u003C/span\u003E\u003Cspan class=\u0022text-primary\u0022\u003E\u003Cbr\u003E\u003C/span\u003E\u003Cspan class=\u0022text-primary\u0022 style=\u0022white-space: pre-wrap;\u0022\u003ETo Grow Your Business Faster\u003C/span\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
           }
         }
       ]
