email confirmation functionality

--- a/Onatrix_Umbraco.csproj
+++ b/Onatrix_Umbraco.csproj
@@ -13,16 +13,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Azure.Communication.Email" Version="1.1.0" />
 		<PackageReference Include="Umbraco.Cms" Version="16.2.0" />
+		<PackageReference Include="Umbraco.Forms" Version="16.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.3" />
 		<PackageReference Include="uSync" Version="16.1.0" />
-		<RuntimeHostConfigurationOption
-			Include="System.Globalization.AppLocalIcu"
-			Value="72.1.0.3"
-			Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
+		<RuntimeHostConfigurationOption Include="System.Globalization.AppLocalIcu" Value="72.1.0.3" Condition="$(RuntimeIdentifier.StartsWith('linux')) or $(RuntimeIdentifier.StartsWith('win')) or ('$(RuntimeIdentifier)' == '' and !$([MSBuild]::IsOSPlatform('osx')))" />
 	</ItemGroup>
 
 	<ItemGroup>
