--- a/dummy.appsettings.json
+++ b/dummy.appsettings.json
@@ -34,6 +34,10 @@
       },
       "Security": {
         "AllowConcurrentLogins": false
+      },
+      "ACS": {
+        "ConnectionString": "",
+        "SenderAddress": ""
       }
     }
   }
