sttyling of confirmation message

--- a/Onatrix_Umbraco.csproj
+++ b/Onatrix_Umbraco.csproj
@@ -31,6 +31,7 @@
 
 	<ItemGroup>
 		<Content Update="wwwroot\js\**\*.js" CopyToPublishDirectory="Always" />
+		<Content Include="wwwroot\images\**\*.*" CopyToOutputDirectory="Always" />
 	</ItemGroup>
 
 
