styling message confirmation

--- a/uSync/v16/Content/2025-10-14-09-10-cristina-mosquera.config
+++ b/uSync/v16/Content/2025-10-14-09-10-cristina-mosquera.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="6dacdf96-fa71-4ebb-843f-04ae343a83fb" Alias="2025-53-14 08:53 - Cristina Mosquera " Level="101">
+<Content Key="5a706997-0861-4d4e-9250-2db02bca1da9" Alias="2025-10-14 09:10 - Cristina Mosquera " Level="101">
   <Info>
     <Parent Key="00000000-0000-0000-0000-000000000000"></Parent>
     <Path>/[-20]/CristinaMosquera</Path>
     <Trashed Parent="e578f53c-28f9-4827-82c8-a49d26ec2d5d">true</Trashed>
     <ContentType>questionRequest</ContentType>
-    <CreateDate>2025-11-14T08:53:21</CreateDate>
-    <NodeName Default="2025-53-14 08:53 - Cristina Mosquera " />
-    <SortOrder>21</SortOrder>
+    <CreateDate>2025-11-14T09:10:27</CreateDate>
+    <NodeName Default="2025-10-14 09:10 - Cristina Mosquera " />
+    <SortOrder>19</SortOrder>
     <Published Default="false" />
     <Schedule />
     <Template />
@@ -20,7 +20,7 @@
       <Value><![CDATA[Cristina Mosquera ]]></Value>
     </questionRequestName>
     <questionRequestQuestion>
-      <Value><![CDATA[hejsan!]]></Value>
+      <Value><![CDATA[hello]]></Value>
     </questionRequestQuestion>
   </Properties>
 </Content>
