--- a/uSync/v16/Content/2025-40-14-08-40-cristina-mosquera.config
+++ b/uSync/v16/Content/2025-40-14-08-40-cristina-mosquera.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Content Key="181367f2-3699-4730-b25d-401ec01717b4" Alias="2025-40-14 08:40 - Cristina Mosquera " Level="2">
+<Content Key="181367f2-3699-4730-b25d-401ec01717b4" Alias="2025-40-14 08:40 - Cristina Mosquera " Level="101">
   <Info>
-    <Parent Key="e578f53c-28f9-4827-82c8-a49d26ec2d5d">Form Submissions</Parent>
-    <Path>/FormSubmissions/CristinaMosquera</Path>
-    <Trashed>false</Trashed>
+    <Parent Key="00000000-0000-0000-0000-000000000000"></Parent>
+    <Path>/[-20]/CristinaMosquera</Path>
+    <Trashed Parent="e578f53c-28f9-4827-82c8-a49d26ec2d5d">true</Trashed>
     <ContentType>questionRequest</ContentType>
     <CreateDate>2025-11-14T08:40:11</CreateDate>
     <NodeName Default="2025-40-14 08:40 - Cristina Mosquera " />
-    <SortOrder>2</SortOrder>
+    <SortOrder>22</SortOrder>
     <Published Default="false" />
     <Schedule />
     <Template />
